--- a/MikrotikApi/MikrotikApi.csproj
+++ b/MikrotikApi/MikrotikApi.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol\Attribute.cs" />
     <Compile Include="Protocol\Command.cs" />
