--- a/MikrotikApi/MikrotikApi.csproj
+++ b/MikrotikApi/MikrotikApi.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="CommandBuilder.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol\AttributeWord.cs" />
@@ -55,7 +56,10 @@
     <Compile Include="Protocol\Response.cs" />
     <Compile Include="Protocol\Sentence.cs" />
     <Compile Include="Protocol\Word.cs" />
+    <Compile Include="QueryBuilder.cs" />
+    <Compile Include="QueryOperations.cs" />
     <Compile Include="Tests\TestClient.cs" />
+    <Compile Include="Tests\TestQueryBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
@@ -63,6 +67,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
